--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </div>
       <div class="card-container">
         <div class="card-40">
-          <div id="section1-component" class="card-40 content-container"></div>
-          <div id="section2-component" class="card-40 content-container"></div>
+          <div id="section1-component" class="content-container"></div>
+          <div id="section2-component" class="content-container"></div>
         </div>
 
         <div class="card-60">
