--- a/page2.html
+++ b/page2.html
@@ -42,10 +42,10 @@
             >
             <div class="radio-group">
               <div class="yes">
-                <i class="far fa-circle" id="yes-icon"></i> <span>Yes</span>
+                <i class="far fa-circle" id="yes1-icon"></i> <span>Yes</span>
               </div>
               <div class="no">
-                <i class="far fa-circle" id="no-icon"></i> <span>No</span>
+                <i class="far fa-circle" id="no1-icon"></i> <span>No</span>
               </div>
             </div>
           </div>
