--- a/page4.html
+++ b/page4.html
@@ -28,14 +28,22 @@
           </div>
           <div class="question">
             <label
-              >8. Please briefly list the health conditions that prevent you from
-              working.</label
+              >8. Please briefly list the health conditions that prevent you
+              from working.</label
             >
             <textarea class="full-width-textarea"></textarea>
           </div>
+          
           <div id="next-button-component"></div>
+          <div id="policy-container"></div>
+
         </div>
-        <div id="section2-component2" class="card-40 content-container section2-2"></div>
+        
+        <div
+          id="section2-component2"
+          class="card-40 content-container section2-2"
+        ></div>
+        <div id="policy2-container"></div>
       </div>
     </div>
     <div id="footer-container"></div>
