--- a/page5.html
+++ b/page5.html
@@ -49,28 +49,12 @@
             <input type="email" class="full-width-input" />
           </div>
   
-          <div>
-            <p class="policy-text">
-              By submitting this form I agree to the
-              <a href="https://example.com/terms" target="_blank">Terms of Use</a>
-              and
-              <a href="https://example.com/privacy" target="_blank"
-                >Privacy Policy</a
-              >
-              and consent to be contacted by Martindale-Nolo and its affiliates,
-              and up to three attorneys regarding this request and to receiving
-              relevant marketing messages by automated means, text and/or
-              prerecorded messages at the number provided. Consent is not required
-              as a condition of service,
-              <a href="https://example.com/click" target="_blank">Click</a>
-              <a href="https://example.com/here" target="_blank">Here</a>
-              to agree without providing consent to be contacted by automated
-              means, text and/or prerecorded messages. Rates may apply.
-            </p>
-          </div>
           <div id="next-button-component"></div>
+          <div id="tou-container"></div>
+          
         </div>
         <div id="section2-component2" class="card-40 content-container section2-2"></div>
+        <div id="tou2-container"></div>
       </div>
     </div>
     <div id="footer-container"></div>
